--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,6 +16,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FoodiGo1"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDLZmI47uiO9nCsgqFNNQnDfz8P5FT-Yus" />
+
+
         <activity
             android:name=".GalleryPhotoActivity"
             android:exported="false">
@@ -46,13 +52,13 @@
         <activity
             android:name=".Maps3Activity"
             android:exported="false">
+
+
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-            <meta-data
-                android:name="com.google.android.geo.API_KEY"
-                android:value="AIzaSyCSyvQ6ox6VDt5co-1nYO27kDweoJjAXBY"
-                ></meta-data>
+
         </activity>
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
@@ -65,9 +71,7 @@
              project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
              "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
         -->
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY" />
+
 
         <activity
             android:name=".Maps1Activity"
