--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         tools:targetApi="31">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAYOiKhNmUQ5wXkDV-8Y4VEIUu6sdQa1JY" />
+            android:value="@string/google_maps_key" />
         <activity
             android:name=".GalleryPhotoActivity"
             android:exported="false">
