--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     implementation 'com.google.android.libraries.places:places:3.0.0'
 
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+
 }
