--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'androidx.activity:activity:1.2.0-alpha08'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
@@ -46,5 +47,6 @@ dependencies {
     implementation 'com.google.android.libraries.places:places:3.0.0'
 
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'com.google.maps.android:android-maps-utils:2.4.0'
 
 }
