--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,7 +86,9 @@
              project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
              "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
         -->
-        <service android:name=".LocationService"/>
+        <service android:name=".LocationService"
+            android:enabled="true"
+            android:exported="true"/>
         <service android:name=".LocationServiceForMaps3"/>
 
         <activity
