--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,31 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'com.google.maps.android:android-maps-utils:2.4.0'
+    //implementation 'com.google.android.cameraview:cameraview:2.7.1'
 
+
+
+
+    // Les implementations suivantes sont utiles à l'api arcore
+    // ARCore (Google Play Services for AR) library.
+    implementation 'com.google.ar:core:1.35.0'
+
+    // Obj - a simple Wavefront OBJ file loader
+    // https://github.com/javagl/Obj
+    implementation 'de.javagl:obj:0.2.1'
+
+    // Glide - An image loading and caching library for Android
+    // https://github.com/bumptech/glide
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+
+    //implementation 'androidx.appcompat:appcompat:1.1.0'
+    //implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.collection:collection:1.2.0'
+}
+
+configurations {
+    all {
+        exclude group: 'com.android.support', module: 'support-compat'
+    }
 }
