commentaire et resolution de bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,13 @@
         android:theme="@style/Theme.FoodiGo1"
         tools:targetApi="31">
         <activity
+            android:name=".DidicaticielActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".SettingsActivity"
             android:exported="false">
             <meta-data
@@ -47,41 +54,14 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".tempActivity"
-            android:noHistory="true"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />    
-                
-        </activity>
-        <activity
-            android:name=".Photo3Activity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".Photo2Activity"
-            android:exported="false">
+            android:name=".TempActivity"
+            android:exported="false"
+            android:noHistory="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
 
-        <service
-            android:name=".LocationService2"
-            android:enabled="true"
-            android:exported="true"/>
-
-        <activity
-            android:name=".CameraActvity2"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
 
         <service
             android:name=".CompassService"
@@ -119,8 +99,7 @@
         </activity>
         <activity
             android:name=".PhotoActivity"
-            android:exported="false"
-           >
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -134,7 +113,6 @@
         </activity>
         <activity
             android:name=".Maps3Activity"
-
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -155,11 +133,8 @@
             android:name=".LocationService"
             android:enabled="true"
             android:exported="true" />
-        <service android:name=".LocationServiceForMaps3" />
 
-        <activity
-            android:name=".Maps1Activity"
-            android:exported="false" />
+        
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -175,16 +150,19 @@
         </activity>
         <activity
             android:name=".augmentedimage.AugmentedImageActivity"
-            android:noHistory="true"
             android:configChanges="orientation|screenSize"
-            android:exported="true"
+            android:exported="false"
+            android:noHistory="true"
             android:screenOrientation="locked"
             android:theme="@style/Theme.AppCompat.NoActionBar">
+
+            <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            -->
         </activity>
 
         <meta-data
