--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,12 +22,13 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS" />
     <uses-permission android:name="android.permission.CAMERA" />
-
-    <uses-feature android:name="android.hardware.location.gps" />
-
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permision.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-feature android:name="android.hardware.location.gps" />
+
+
 
     <application
         android:allowBackup="true"
@@ -92,7 +93,7 @@
         <activity
             android:name=".GalleryFoodiesActivity"
             android:exported="false"
-            android:noHistory="true">
+            android:noHistory="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -134,7 +135,7 @@
             android:enabled="true"
             android:exported="true" />
 
-        
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
