--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,21 @@
         android:theme="@style/Theme.FoodiGo1"
         tools:targetApi="31">
         <activity
-            android:name=".DidicaticielActivity"
+            android:name=".TotemClickedShown"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".ShowTotem"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".UserTotemActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -54,14 +68,40 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".TempActivity"
+            android:name=".tempActivity"
             android:exported="false"
             android:noHistory="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity
+            android:name=".Photo3Activity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Photo2Activity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
 
+        <service
+            android:name=".LocationService2"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity
+            android:name=".CameraActvity2"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
 
         <service
             android:name=".CompassService"
@@ -133,8 +173,11 @@
             android:name=".LocationService"
             android:enabled="true"
             android:exported="true" />
+        <service android:name=".LocationServiceForMaps3" />
 
-        
+        <activity
+            android:name=".Maps1Activity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -151,18 +194,15 @@
         <activity
             android:name=".augmentedimage.AugmentedImageActivity"
             android:configChanges="orientation|screenSize"
-            android:exported="false"
+            android:exported="true"
             android:noHistory="true"
             android:screenOrientation="locked"
             android:theme="@style/Theme.AppCompat.NoActionBar">
-
-            <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            -->
         </activity>
 
         <meta-data
