--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,21 +41,7 @@
         android:theme="@style/Theme.FoodiGo1"
         tools:targetApi="31">
         <activity
-            android:name=".TotemClickedShown"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".ShowTotem"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".UserTotemActivity"
+            android:name=".DidicaticielActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -69,40 +55,14 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".tempActivity"
+            android:name=".TempActivity"
             android:exported="false"
             android:noHistory="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity
-            android:name=".Photo3Activity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".Photo2Activity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
 
-        <service
-            android:name=".LocationService2"
-            android:enabled="true"
-            android:exported="true" />
-
-        <activity
-            android:name=".CameraActvity2"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
 
         <service
             android:name=".CompassService"
@@ -174,7 +134,6 @@
             android:name=".LocationService"
             android:enabled="true"
             android:exported="true" />
-        <service android:name=".LocationServiceForMaps3" />
 
 
         <activity
@@ -193,15 +152,18 @@
         <activity
             android:name=".augmentedimage.AugmentedImageActivity"
             android:configChanges="orientation|screenSize"
-            android:exported="true"
+            android:exported="false"
             android:noHistory="true"
             android:screenOrientation="locked"
             android:theme="@style/Theme.AppCompat.NoActionBar">
+
+            <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            -->
         </activity>
 
         <meta-data
